
2023-07-22  Simon Sobisch <simonsobisch@gnu.org>

	* coblocal.h (COB_MAX_FIELD_SIZE_LINKAGE): new definition

2023-07-21  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (get_config_val): fixed output of "not set" for enum values
	* common.c (create_dumpfile): more details if dump could not be created

2023-07-18  Simon Sobisch <simonsobisch@gnu.org>
after suggestions by Chuck Haatvedt <chuck.haatvedt+cobol@gmail.com>

	* move.c (cob_move_display_to_packed): fix memory trashing in edge cases

2023-07-10  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_check_fence), common.h: new function to check for writing
	  outside of COBOL data, triggered with compile option -fmemory-check
	* statement.def (STMT_BEFORE_CALL, STMT_BEFORE_UDF): new internal
	  statements, currently used for cob_check_fence

2023-06-22  Simon Sobisch <simonsobisch@gnu.org>

	* numeric.c (cob_decimal_set_packed): backport pack_to_bin change while
	  adjusting its translation table for invalid BCD "digits" to yield the
	  same result as before
	* numeric.c (cob_decimal_set_packed): more optimizations for speed
	* move.c (cob_packed_get_int, packed_get_long_long): apply optimizations
	  from (cob_decimal_set_packed) including skipping leading zeros and
	  pack_to_bin
	* common.c (b2i): include marker for invalid data (previously not set)

2023-06-21  Simon Sobisch <simonsobisch@gnu.org>

	* numeric.c (cob_set_packed_u64): extracted from cob_set_packed_int
	  and extended, allowing to internally use bigger values without
	  a double-check of the sign
	* numeric.c (cob_decimal_get_packed): set by unsigned long when possible,
	  instead of signed int (increasing from 9 to 19 digits for many systems)
	* numeric.c (cob_decimal_get_display, cob_decimal_set_display,
	  cob_decimal_do_round): fix compile warnings

2023-06-20  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (get_screenio_and_mouse_info) [__PDCURSES__]:
	  drop old version checks, set patch version